Integrating new remote protocol